Added inactive links for categories / subcategories within seeds.rb, categories_controller.rb, index.html.erb

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -17,62 +17,47 @@
     <div class="center-one">
       <table>
         <tr>
-          <th class="table-header">community</th>
+          <th class="table-header"><%= link_to 'community' %></th>
         </tr>
         <tr>
           <td>
+            <!--list all subcategories-->
+            <% @community.subcategories.each do |subcategory| %>
             <ul class="left-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <li><%= link_to subcategory.name %></li>
             </ul>
-            <ul class="right-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-            </ul>
+            <% end %>
           </td>
         </tr>
       </table>
       <table>
         <tr>
-          <th class="table-header">personals</th>
+          <th class="table-header"><%= link_to 'personals' %></th>
         </tr>
         <tr>
           <td>
             <ul>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <% @personals.subcategories.each do |subcategory| %>
+              <ul class="left-list">
+                <li><%= link_to subcategory.name %></li>
+              </ul>
+              <% end %>
             </ul>
           </td>
         </tr>
       </table>
       <table>
         <tr>
-          <th class="table-header">services</th>
+          <th class="table-header"><%= link_to 'services' %></th>
         </tr>
         <tr>
           <td>
             <ul class="left-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-            </ul>
-            <ul class="right-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <% @services.subcategories.each do |subcategory| %>
+              <ul class="left-list">
+                <li><%= link_to subcategory.name %></li>
+              </ul>
+              <% end %>
             </ul>
           </td>
         </tr>
@@ -81,58 +66,30 @@
     <div class="center-two">
       <table>
         <tr>
-          <th class="table-header">housing</th>
+          <th class="table-header"><%= link_to 'housing' %></th>
         </tr>
         <tr>
           <td>
+            <% @housing.subcategories.each do |subcategory| %>
             <ul>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <li><%= link_to subcategory.name %></li>
             </ul>
+            <% end %>
           </td>
         </tr>
       </table>
       <table>
         <tr>
-          <th class="table-header">for sale</th>
+          <th class="table-header"><%= link_to 'for sale' %></th>
         </tr>
         <tr>
           <td>
             <ul class="left-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-            </ul>
-            <ul class="right-list">
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <% @for_sale.subcategories.each do |subcategory| %>
+              <ul class="left-list">
+                <li><%= link_to subcategory.name %></li>
+              </ul>
+              <% end %>
             </ul>
           </td>
         </tr>
@@ -141,36 +98,16 @@
     <div class="center-three">
       <table>
         <tr>
-          <th class="table-header">jobs</th>
+          <th class="table-header"><%= link_to 'jobs' %></th>
         </tr>
         <tr>
           <td>
             <ul>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
-              <li>test</li>
+              <% @jobs.subcategories.each do |subcategory| %>
+              <ul class="left-list">
+                <li><%= link_to subcategory.name %></li>
+              </ul>
+              <% end %>
             </ul>
           </td>
         </tr>
