Added unresponsive functionality for category/subcategory links, 'post to classifieds' section

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
   <div class="leftbar">
     <a href="#"><h1>BettrList</h1></a>
     <ul>
-      <a href="#">post to classifieds</a>
+      <%= link_to 'post a classifieds', new_listing_path %> <!-- gotten from rake routes then see new_listing on left, add path at end-->
       <li>my account</li>
     </ul>
     <form>
@@ -17,14 +17,14 @@
     <div class="center-one">
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'community' %></th>
+          <th class="table-header"><%= link_to 'community', category_path(@community) %></th> <!-- 'show' community parameter from rake routes -->
         </tr>
         <tr>
           <td>
             <!--list all subcategories-->
             <% @community.subcategories.each do |subcategory| %>
             <ul class="left-list">
-              <li><%= link_to subcategory.name %></li>
+              <li><%= link_to subcategory.name, category_subcategory_path(@community, subcategory) %></li> <!-- passes in community id, subcategory id-->
             </ul>
             <% end %>
           </td>
@@ -32,14 +32,14 @@
       </table>
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'personals' %></th>
+          <th class="table-header"><%= link_to 'personals', category_path(@personals) %></th>
         </tr>
         <tr>
           <td>
             <ul>
               <% @personals.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@personals, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
@@ -48,14 +48,14 @@
       </table>
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'services' %></th>
+          <th class="table-header"><%= link_to 'services', category_path(@services) %></th>
         </tr>
         <tr>
           <td>
             <ul class="left-list">
               <% @services.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@services, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
@@ -66,13 +66,13 @@
     <div class="center-two">
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'housing' %></th>
+          <th class="table-header"><%= link_to 'housing', category_path(@housing) %></th>
         </tr>
         <tr>
           <td>
             <% @housing.subcategories.each do |subcategory| %>
             <ul>
-              <li><%= link_to subcategory.name %></li>
+              <li><%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %></li>
             </ul>
             <% end %>
           </td>
@@ -80,14 +80,14 @@
       </table>
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'for sale' %></th>
+          <th class="table-header"><%= link_to 'for sale', category_path(@for_sale) %></th>
         </tr>
         <tr>
           <td>
             <ul class="left-list">
               <% @for_sale.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@for_sale, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
@@ -98,14 +98,14 @@
     <div class="center-three">
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'jobs' %></th>
+          <th class="table-header"><%= link_to 'jobs', category_path(@jobs) %></th>
         </tr>
         <tr>
           <td>
             <ul>
               <% @jobs.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@jobs, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
