Fixed misspelling of subcategory bug

--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -23,7 +23,7 @@
 
     <p>
       <%= f.label :subcategroy_id %>
-      <%= f.select :subcategroy_id, Subcategory.all.map{ |f| [f.name, f.id]} %>
+      <%= f.select :subcategory_id, Subcategory.all.map{ |f| [f.name, f.id]} %>
     </p>
 
     <%= f.label :city %>
