Added functionality to dynamically add categories and subcategories. Updated naming, README

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,12 +1,12 @@
 <div class="container">
   <div class="leftbar">
-    <a href="#"><h1>BettrList</h1></a>
+    <a href="#"><h1>jiffylist</h1></a>
     <ul>
       <%= link_to 'post a classifieds', new_listing_path %> <!-- gotten from rake routes then see new_listing on left, add path at end-->
       <li>my account</li>
     </ul>
     <form>
-      <p>search BettrList</p>
+      <p>search jiffylist</p>
       <input type="text" name="firstname" placeholder="search" size="20">
       <br>
       <input type="text" name="firstname" placeholder="where" size="20">
@@ -122,7 +122,7 @@
       <li><%= link_to 'personal safety tips', safety_path%></li>
       <li class="rightbar-top"><%= link_to 'Terms of Use', terms_path%></li>
       <li><%= link_to 'privacy policy', privacy_path%></li>
-      <li><%= link_to 'about BettrList', about_path%></li>
+      <li><%= link_to 'about jiffylist', about_path%></li>
       <li><%= link_to 'Contact Us', contact_path%></li>
     </ul>
   </div>
