--- a/app/views/pages/safety.html.erb
+++ b/app/views/pages/safety.html.erb
@@ -1,6 +1,6 @@
 <div class="topbar">
   <div class="container">
-    rubyslist
+    <%= link_to 'jiffylist', root_path %> >
   </div>
 </div>
 <div class="container">
