--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,13 +5,13 @@
       <%= link_to 'post a classifieds', new_listing_path %> <!-- gotten from rake routes then see new_listing on left, add path at end-->
       <li>my account</li>
     </ul>
-    <form>
+      <%= form_tag search_listings_path, method: :get do |f| %>
       <p>search jiffylist</p>
-      <input type="text" name="firstname" placeholder="search" size="20">
-      <br>
-      <input type="text" name="firstname" placeholder="where" size="20">
-      <br>
-    </form>
+      <%= text_field_tag :search, nil, placeholder: 'search' %>
+      <%= text_field_tag :location, nil, placeholder: 'near' %>
+      <%= select_tag :category, options_for_select(Category.all.map{ |c| [c.name, c.id]}) %>
+      <%= submit_tag '>' %>
+      <% end %>
   </div>
   <div class="center-column" >
     <div class="center-one">
