--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,8 +2,8 @@
   <div class="leftbar">
     <a href="#"><h1>jiffylist</h1></a>
     <ul>
-      <%= link_to 'post a classifieds', new_listing_path %> <!-- gotten from rake routes then see new_listing on left, add path at end-->
-      <li>my account</li>
+      <li><%= link_to 'post a classifieds', new_listing_path %></li> <!-- gotten from rake routes then see new_listing on left, add path at end-->
+      <li><%= link_to 'my account', new_user_session_path %></li>
     </ul>
       <%= form_tag search_listings_path, method: :get do |f| %>
       <p>search jiffylist</p>
