--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,14 @@
     <a href="#"><h1>jiffylist</h1></a>
     <ul>
       <li><%= link_to 'post a classifieds', new_listing_path %></li> <!-- gotten from rake routes then see new_listing on left, add path at end-->
-      <li><%= link_to 'my account', new_user_session_path %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to 'my account', edit_user_registration_path %></li>
+        <li><%= link_to 'log out', destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to 'sign in', new_user_session_path %></li>
+        <li><%= link_to 'sign up', new_user_registration_path %></li>
+      <% end %>
+
     </ul>
       <%= form_tag search_listings_path, method: :get do |f| %>
       <p>search jiffylist</p>
