--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -25,14 +25,14 @@
     <div class="center-one">
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'community', category_path(@community) %></th> <!-- 'show' community parameter from rake routes -->
+          <th class="table-header"><%= link_to 'Digital', category_path(@digital) %></th> <!-- 'show' digital parameter from rake routes -->
         </tr>
         <tr>
           <td>
             <!--list all subcategories-->
-            <% @community.subcategories.each do |subcategory| %>
+            <% @digital.subcategories.each do |subcategory| %>
             <ul class="left-list">
-              <li><%= link_to subcategory.name, category_subcategory_path(@community, subcategory) %></li> <!-- passes in community id, subcategory id-->
+              <li><%= link_to subcategory.name, category_subcategory_path(@digital, subcategory) %></li> <!-- passes in digital id, subcategory id-->
             </ul>
             <% end %>
           </td>
@@ -40,14 +40,14 @@
       </table>
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'personals', category_path(@personals) %></th>
+          <th class="table-header"><%= link_to 'Housing', category_path(@housing) %></th>
         </tr>
         <tr>
           <td>
             <ul>
-              <% @personals.subcategories.each do |subcategory| %>
+              <% @housing.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name, category_subcategory_path(@personals, subcategory) %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
@@ -56,14 +56,14 @@
       </table>
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'services', category_path(@services) %></th>
+          <th class="table-header"><%= link_to 'Writing', category_path(@writing) %></th>
         </tr>
         <tr>
           <td>
             <ul class="left-list">
-              <% @services.subcategories.each do |subcategory| %>
+              <% @writing.subcategories.each do |subcategory| %>
               <ul class="left-list">
-                <li><%= link_to subcategory.name, category_subcategory_path(@services, subcategory) %></li>
+                <li><%= link_to subcategory.name, category_subcategory_path(@writing, subcategory) %></li>
               </ul>
               <% end %>
             </ul>
@@ -74,57 +74,24 @@
     <div class="center-two">
       <table>
         <tr>
-          <th class="table-header"><%= link_to 'housing', category_path(@housing) %></th>
+          <th class="table-header"><%= link_to 'Trade', category_path(@trade) %></th>
         </tr>
         <tr>
           <td>
-            <% @housing.subcategories.each do |subcategory| %>
+            <% @trade.subcategories.each do |subcategory| %>
             <ul>
-              <li><%= link_to subcategory.name, category_subcategory_path(@housing, subcategory) %></li>
+              <li><%= link_to subcategory.name, category_subcategory_path(@trade, subcategory) %></li>
             </ul>
             <% end %>
           </td>
         </tr>
       </table>
-      <table>
-        <tr>
-          <th class="table-header"><%= link_to 'for sale', category_path(@for_sale) %></th>
-        </tr>
-        <tr>
-          <td>
-            <ul class="left-list">
-              <% @for_sale.subcategories.each do |subcategory| %>
-              <ul class="left-list">
-                <li><%= link_to subcategory.name, category_subcategory_path(@for_sale, subcategory) %></li>
-              </ul>
-              <% end %>
-            </ul>
-          </td>
-        </tr>
-      </table>
     </div>
     <div class="center-three">
-      <table>
-        <tr>
-          <th class="table-header"><%= link_to 'jobs', category_path(@jobs) %></th>
-        </tr>
-        <tr>
-          <td>
-            <ul>
-              <% @jobs.subcategories.each do |subcategory| %>
-              <ul class="left-list">
-                <li><%= link_to subcategory.name, category_subcategory_path(@jobs, subcategory) %></li>
-              </ul>
-              <% end %>
-            </ul>
-          </td>
-        </tr>
-      </table>
     </div>
   </div>
   <div class="rightbar">
     <ul class="rightbar-top">
-      <!-- TODO: REPLACED WITH BELOW <li>help and faq</li>-->
       <li><%= link_to 'help and faq', help_path%></li>
       <li><%= link_to 'avoid scams and fraud', scams_path%></li>
       <li><%= link_to 'personal safety tips', safety_path%></li>
